# NeuralStage

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  _recover_all.ps1  build.ps1  build.sh  build_linux.sh  build_wsl.ps1
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
Docs/: Architecture.md  NeuralStage-Manual.md  Screenshots-v0.1.0.md  UI-Spec.md  manual.css
Installer/: NeuralStage-ReleaseNotes.txt  NeuralStage.iss
Resources/: Changelog V0.2.0.txt
Source/: App.cpp  App.h  main.cpp
Source/Audio/: AudioEngine.cpp  AudioEngine.h  SpectrumTap.cpp  SpectrumTap.h  TempoClock.cpp  TempoClock.h
Source/Audio/FX/: AmpToneShaper.h  BackingTrackPlayer.h  DoubleDSP.h  EQ.cpp  EQ.h  HitZoneDSP.h  LevelDSP.h  Looper.h  NoiseGate.cpp  NoiseGate.h  TransposeProcessor.h
Source/Audio/IR/: IRLoader.cpp  IRLoader.h
Source/Audio/NAM/: NAMModel.h  NAMProcessor.cpp  NAMProcessor.h  NamForceLink.cpp  NamForceLink.h  ResamplingNAM.h
Source/Audio/Processors/: InputProcessor.cpp  InputProcessor.h  OutputProcessor.cpp  OutputProcessor.h
Source/Audio/Tuner/: TunerProcessor.h
Source/Core/: AppState.cpp  AppState.h  OfflineRenderer.cpp  OfflineRenderer.h  PresetManager.cpp  PresetManager.h  SceneManager.cpp  SceneManager.h
Source/MIDI/: MIDILearn.cpp  MIDILearn.h  MIDIManager.cpp  MIDIManager.h  MidiClockSender.cpp  MidiClockSender.h
Source/Plugin/: NeuralStageEditor.cpp  NeuralStageEditor.h  NeuralStageProcessor.cpp  NeuralStageProcessor.h
Source/PluginHost/: PluginCategory.h  PluginChain.cpp  PluginChain.h  PluginManager.cpp  PluginManager.h  PluginManagerPlatform.cpp  PluginManagerPlatform.h  PluginSlot.h
Source/UI/: MainComponent.cpp  MainComponent.h
Source/UI/Bars/: ScanStatusOverlay.cpp  ScanStatusOverlay.h  SceneBar.cpp  SceneBar.h  SignalChainBar.cpp  SignalChainBar.h  SweetSpotMeterBar.cpp  SweetSpotMeterBar.h
Source/UI/Components/: BlendPad.cpp  BlendPad.h  KnobComponent.cpp  KnobComponent.h  SpectrumOverlay.cpp  SpectrumOverlay.h  SweetSpotMeter.cpp  SweetSpotMeter.h
Source/UI/Dialogs/: Dialogs.cpp  Dialogs.h  ThemedAlerts.cpp  ThemedAlerts.h
Source/UI/Panels/: AmpKnobsPanel.cpp  AmpKnobsPanel.h  CabPanel.cpp  CabPanel.h  CategoryPopup.cpp  CategoryPopup.h  NamLcdPanel.cpp  NamLcdPanel.h  SideRailPanel.cpp  SideRailPanel.h  TopExtrasPanel.cpp  TopExtrasPanel.h  TunerPanel.cpp  TunerPanel.h
Source/UI/Styles/: AppLNF.h  AppWindowLNF.h  Colours.h  Fonts.h  NDSPKnobRenderer.h  UIConstants.h
Source/Utils/: AppLogger.h  CrashSentinel.h  DiagnosticsZip.h  FileUtils.h  Logger.h  ProjectBundle.h  RecentFiles.h  SystemModal.cpp  SystemModal.h  SystemModal.mm
